infra/kubernetes/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: production
  labels:
    app: notification-service
    version: v1
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
        version: v1
    spec:
      containers:
      - name: notification-service
        image: 697064446528.dkr.ecr.us-east-1.amazonaws.com/cloud-native-cluster/notification-service:latest
        ports:
        - containerPort: 8004
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        readinessProbe:
          httpGet:
            path: /health
            port: 8004
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8004
          initialDelaySeconds: 30
          periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: production
spec:
  selector:
    app: notification-service
  ports:
  - port: 8004
    targetPort: 8004
  type: ClusterIP
